[package]
name = "rust-bot"
version = "0.1.0"
authors = ["Rustlang-by community"]
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
log = "0.4.29"
pretty_env_logger = "0.5.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

regex = "1.12.3"
chrono = "0.4.44"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }

reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0"
redis = { version = "0.25.4", features = ["tokio-comp", "connection-manager"] }
html2text = "0.16.7"
